--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,27 +10,42 @@ on:
 
 jobs:
   docker:
+    name: Build and Publish Image
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+        
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and Push
+
+      - name: Build and Push
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
+          push: false
+          tags: luizmandico/image-tools:latest
+
+      - name: Install Trivy
+        run: |
+          sudo apt update
+          sudo apt install trivy
+
+      - name: Run Trivy Scan
+        run: trivy image luizmandico/image-tools:latest
+
+      - name: Build and Push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: false
           tags: luizmandico/image-tools:latest
